# scalene-mcp

./: CHANGELOG.md  CHANGELOG_VSCODE_INTEGRATION.md  COVERAGE_ANALYSIS_UPDATE.md  PHASE_7_COMPLETE.md  PHASE_8_EXAMPLES.md  PHASE_9_COVERAGE_GAPS.md  PHASE_9_EXECUTION_GUIDE.md  PHASE_9_PLAN.md  PHASE_9_PROGRESS.md  PHASE_9_SESSION_SUMMARY.md  PHASE_9_START_HERE.md  PHASE_9_SUMMARY.md  PHASE_STATUS.md  PROJECT_COMPLETION.md  QUICKSTART.md  README.md  SCALENE_MODES_ANALYSIS.md  SETUP_VSCODE.md  STORAGE_DECISION.md  STORAGE_STRATEGY.md  TOOLS_REFERENCE.md  VSCODE_INTEGRATION_COMPLETE.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: api.md  architecture.md
examples/: README.md
src/scalene_mcp/: __init__.py  analyzer.py  comparator.py  logging.py  models.py  parser.py  profiler.py  server.py  storage.py
tests/: conftest.py  test_examples.py  test_logging.py  test_parser.py  test_profiler.py  test_server.py
tests/fixtures/profiles/: memory_heavy.json  memory_leak.json  simple_cpu.json
